test/admission/validating-admission-policy/assertions/assert-project-b-owner.yaml
apiVersion: resourcemanager.miloapis.com/v1alpha1
kind: Project
metadata:
  name: vap-ok-good-b
  labels:
    resourcemanager.miloapis.com/organization-name: test-vap-org-b
  ownerReferences:
  - apiVersion: resourcemanager.miloapis.com/v1alpha1
    kind: Organization
    name: test-vap-org-b
spec:
  ownerRef:
    kind: Organization
    name: test-vap-org-b
